Fin de partie 2

--- a/index.html
+++ b/index.html
@@ -15,10 +15,24 @@
 			<!-- Menu de recherche -->
 			<section class="filtres">
 				<h3>Filtres</h3>
+				<button class="btn-trier">Trier par prix croissant</button>
+				<br>
+				<button class="btn-trierDec">Trier par prix décroissant</button>
+				<br>
+				<button class="btn-filtrer">Filtrer les pièces non abordables</button>
+				<br>
+				<button class="btn-filtrerDesc">Filtrer les pièces qui n'ont pas de description</button>
 			</section>
+			
 
 			<!-- Fiches produits -->
 			<section class="fiches">
+				<div class="abordables">
+					<p>Pièces abordables</p>
+				</div>
+				<div class="disponibles">
+					<p>Pièces disponibles</p>
+				</div>
 			</section>
 		</main>
 	</body>
