ajout début partie 3

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 				<button class="btn-filtrer">Filtrer les pièces non abordables</button>
 				<br>
 				<button class="btn-filtrerDesc">Filtrer les pièces qui n'ont pas de description</button>
+				<br>
+				<br>
+				<input type="range" min="0" max="60" step="5" class="prixMax">
+				<p class="fef"></p>
 			</section>
 			
 
