Envoyez une requête depuis le navigateur terminé

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 				<button class="btn-filtrerDesc">Filtrer les pièces qui n'ont pas de description</button>
 				<br>
 				<br>
-				<input type="range" min="0" max="60" step="5" class="prixMax">
+				<p>Prix maximum</p>
+				<input type="range" name="prixmax" min="0" max="60" step="5" class="prixMax">
 				<p class="fef"></p>
 			</section>
 			
